tests/snapshots/snapshots__manage_projects_with_rename_prompt_text.snap
---
source: tests/snapshots.rs
expression: buffer_to_text(&buf)
---
┌ Project Management  by name ─────────────────────────────────────────────────────────────────────┐
│ > +finance                                                                                       │
│   +health                                                                                        │
│   +home                                                                                          │
│   +learning                                                                                      │
│   +personal                                                                                      │
│   +travel                                                                                        │
│   +work                                                                                          │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                        ┌ RENAME PROJECT ────────────────────────────────┐                        │
│                        │  + work2█                                      │                        │
│                        │                                                │                        │
│                        │                                                │                        │
│                        └────────────────────────────────────────────────┘                        │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
 RENAME PROJECT   type new name · Enter rename · Esc cancel 15 open · 2026-05-06 · tuxtime 2026.7.3
